
         • ‘analyse_SAR.CWOSL()’

             • The function now checks more strict for allowed record
               types ('OSL' or 'IRSL'). At the same time the function
               will not stop with an error if no such record type is
               detected, but return ‘NULL’ and print a warning. This
               was necessary to prevent a misuse of the function, which
               may end up in undesiered (wrong) results.

         • ‘apply_CosmicRayRemoval()’

             • Argument ‘silent’ renamed to ‘verbose’,

             • new argument ‘method.Pych.threshold_factor’ added to
               have a better control for the threshold value used for
               the removal,

             • new argument ‘MARGIN’ added to allow the application of
               the methods along the wavelength or the time.

         • ‘calc_FadingCorr()’

             • Table column headers now have all capital letters,

             • minor performance improvements.

         • ‘calc_OSLLxTxRatio()’

             • New argument ‘digits’ introduced to allow direct
               rounding of the numbers,

             • add argument ‘sig0’ to allow for an extra component of
               error.

         • ‘plot_RLum.Analysis()’

             • All ‘...’ arguments can now be provided as ‘vector’ or
               ‘list’ to gain more control of the plot appearance,

             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE).

         • ‘plot_GrowthCurve()’

             • If the input data contain a least one infinite value the
               function will not crash any longer, but return ‘NULL’
               (#263, Norbert Mercier).

         • ‘merge_RLum.Data.Curve()’
