@@ -103,7 +103,7 @@
 </td>
 <td class=cellinside>2016-01-26
 </td>
-<td class=cellinside>14:43:47
+<td class=cellinside>16:12:14
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
