@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.3 by xtable 1.8-0 package
-% Tue Jan 26 15:52:04 2016
+% Tue Jan 26 16:15:31 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -10,7 +10,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.2.0 & 2016-01-18 & 15:07:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.7.1 & 2016-01-26 & 14:43:47
+  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.7.1 & 2016-01-26 & 16:12:14
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   4 & Analyse\_SAR.OSLdata & Analyse SAR CW-OSL measurements. & $<$br /$>$ The function analyses SAR CW-OSL curve data and provides a summary of the$<$br /$>$ measured data for every position. The output of the function is optimised$<$br /$>$ for SAR OSL measurements on quartz.$<$br /$>$ & 0.2.17 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR, Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
